# Intelligent-lab-system

./: README.md
Intelligent-lab-system/: 1.txt  CMakeLists.txt  Page1.cpp  Page1.h  Page2.cpp  Page2.h  Page3.cpp  Page3.h  main.cpp  mainwindow.cpp  mainwindow.h  myPushButton.cpp  myPushButton.h  wifi.cpp  wifi.h
Intelligent-lab-system/driver/: .eeprom.ko.cmd  .eeprom.mod.o.cmd  .eeprom.o.cmd  .light.ko.cmd  .light.mod.o.cmd  .light.o.cmd  .oled.ko.cmd  .oled.mod.o.cmd  .oled.o.cmd  .temperature.ko.cmd  .temperature.mod.o.cmd  .temperature.o.cmd  .wet.ko.cmd  .wet.mod.o.cmd  .wet.o.cmd  CMakeLists.txt  eeprom.c  light.c  oled.c  temperature.c  wet.c
Intelligent-lab-system/driver/.tmp_versions/: eeprom.mod  light.mod  oled.mod  temperature.mod  wet.mod
Intelligent-lab-system/include/arcface/: arcface.h  base.h  mtcnn.h
Intelligent-lab-system/include/ncnn/: platform.h
Intelligent-lab-system/include/sensor/: eeprom.h  error.h  light.h  oled.h  temperature.h  wet.h
Intelligent-lab-system/include/sqlite/: sqlite.h
Intelligent-lab-system/source/arcface/: arcface.cpp  base.cpp  mtcnn.cpp
Intelligent-lab-system/source/sensor/: eeprom.cpp  light.cpp  oled.cpp  temperature.cpp  wet.cpp
Intelligent-lab-system/source/sqlite/: sqlite.cpp
build-Intelligent-lab-system-Desktop_Qt_5_12_9_GCC_64bit-Debug/: CMakeCache.txt  Intelligent-lab-system.cbp  Makefile  cmake_install.cmake  qtcsettings.cmake
build-Intelligent-lab-system-Desktop_Qt_5_12_9_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-3a3c43d0f0e484f34f54.json  cmakeFiles-v1-9da7476f1e57e2ac4ac4.json  codemodel-v2-1faf0e2c6b24226a8249.json  index-2024-05-19T15-09-55-0789.json  target-Intelligent-lab-system-Debug-4329a34a4538bd5188dd.json  target-Intelligent-lab-system_autogen-Debug-ff859d671d09a8e8bff4.json  target-build_-Debug-b4c8bb6d7a0ad42fcbba.json
build-Intelligent-lab-system-Desktop_Qt_5_12_9_GCC_64bit-Debug/Intelligent-lab-system_autogen/EWIEGA46WW/: moc_mainwindow.cpp
build-Intelligent-lab-system-Desktop_Qt_5_12_9_GCC_64bit-Debug/driver/: Makefile  cmake_install.cmake
